# bullm-remote

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  README.md  THIRD-PARTY-LICENSES.md  index.html  package.json  schema.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop.rs  lib.rs  main.rs
src-tauri/src/udp/: lib.rs
src/assets/options/: plugin.json
src/assets/styles/: component.scss  global-mixins.scss  style.scss
src/components/base/: ZCollapse.vue  ZFieldBtn.vue  ZFlex.vue  ZFloatingPanel.vue  ZHorizontalScroll.vue  ZIcon.vue  ZNullCell.vue  ZPopover.vue  ZPopup.vue  ZPopupSetup.vue  ZSwipeCell.vue  ZTag.vue  ZVanCell.vue
src/components/business/: Titlebar.vue  Warning.vue  ZDialogAll.vue
src/components/form/: ZSelectIcon.vue  ZVanDevice.vue  ZVanI2C.vue  ZVanNumber.vue  ZVanPin.vue  ZVanSelect.vue  ZVanSlider.vue  ZVanSwitch.vue
src/constants/: index.ts
src/plugin/: configView.ts  export.ts  index.ts
src/plugin/built-in/: index.json  schema.json
src/plugin/component/: IconView.vue  PluginComponent.vue  PluginIcon.vue
src/router/: index.ts
src/store/: car.ts  index.ts  options.ts  plugin.ts  ui.ts  warning.ts
src/store/control/: walk.ts  (+1 more)
src/typings/: auto-import.d.ts  components.d.ts  index.d.ts
src/utils/: bus.ts  index.ts  plugin.ts
src/views/: debug.ts
(+100 files in other folders)
