[package]
name = "bullm-remote"
version = "1.0.0"
description = "Bullm Remote App"
authors = ["牛明工作室 / yy祝"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bullm_remote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.1", features = ["net", "time", "sync", "rt", "macros"] }
lazy_static = "1.5.0"
time = "0.3.37"
thiserror = "1.0.69"
tauri-plugin-opener = "2.5.2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

